<resources>
    <string name="app_name">Arabian Oud</string>
    <string name="main_activity_title">Arabian Oud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">category</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_my_cart">MyCart</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_wish_list">WishList</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_birthdate">Birthdate</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_stored_address">Shipping Address</string>
    <string name="title_activity_add_address">Add Address</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_paypal">Paypal Payment</string>
    <string name="title_activity_payment_confirmation">Payment Confirmation</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_credit_card">Credit Card Payment</string>
    <string name="title_activity_contactus">Contact Us</string>
    <string name="title_activity_store_locator">Stores Location</string>
    <string name="title_activity_select_region">Select Region</string>
    <string name="payment_confirmation_home">Home</string>
    <string name="myAccount">My Account</string>
    <string name="SearchKey">Search</string>
    <string name="searching">Searching...</string>
    <string name="chooseadd">Select the address you want to deliver the shipment</string>
    <string name="storeLocator_branches">Branches</string>
    <string name="paypal_buy">Purchase</string>
    <string name="search_textView">Searching For</string>
    <string name="please_wait">Please wait ...</string>
    <string name="main_activity_search_key">Enter Search Key</string>
    <string name="main_activity_popular">Popular categories</string>
    <string name="main_activity_explore">EXPLORE</string>
    <string name="main_activity_offers">Offers</string>
    <string name="main_activity_execlusive">Exclusive</string>
    <string name="main_activity_women">Women</string>
    <string name="main_activity_best_sellers">Best Sellers</string>
    <string name="newArrival">New Arrival</string>
    <string name="main_activity_men">Men</string>
    <string name="main_activity_special_occassions">Special Occassions</string>
    <string name="main_activity_off">OFF</string>
    <string name="main_activity_currency">SAR</string>
    <string name="main_activity_exit">Exit Arabian Oud?</string>
    <string name="main_activity_freeshipping">Free shipping</string>
    <string name="main_activity_workingtime">Working time\n08:00 to 22:00</string>
    <string name="main_activity_days">30 days money \n back guarantee</string>
    <string name="main_activity_contactus">Contact \n Us</string>
    <string name="search_noProduct">No Products Found</string>
    <string name="title_section1">Oud &amp; Incense</string>
    <string name="title_section2">Perfumes</string>
    <string name="title_section3">Oil Perfumes</string>
    <string name="title_section4">Exclusives</string>
    <string name="title_section5">Spray Perfumes</string>
    <string name="title_section6">Today\'s Deals</string>
    <string-array name="side_menu">
        <item>OUD &amp; INCENSE</item>
        <item>PERFUMES</item>
        <item>OIL PERFUMES</item>
        <item>EXCLUSIVES</item>
        <item>SPRAY PERFUMES</item>
        <item>TODAY\'S DEALS</item>
    </string-array>
    <string-array name="side_menu_sub1">
        <item>Perfumes</item>
        <item>Men\'s Collection</item>
        <item>Women\'s Collection</item>
        <item>Unisex Collection</item>
        <item>Oriental Perfumes</item>
        <item>Western Perfumes</item>
        <item>Oriental+Western</item>
    </string-array>
    <string-array name="side_menu_sub2">
        <item>Oud &amp; Incense</item>
        <item>Arabian Oud</item>
        <item>Arabian Ma\'joon</item>
        <item>Arabian Mabthoth</item>
    </string-array>
    <string-array name="side_menu_sub3">
        <item>Oil Perfumes</item>
        <item>Dehn Oud</item>
        <item>Arabian Blends</item>
        <item>Aromatic Oils</item>
    </string-array>
    <string name="side_menu_changeLanguage">Arabic Language</string>
    <string name="side_menu_account">Account</string>
    <string name="side_menu_stores">Stores</string>
    <string name="side_menu_contact">Contact</string>
    <string name="category_buy_now">BUY NOW</string>
    <string name="details_buy_now">BUY NOW</string>
    <string name="details_cart">CART</string>
    <string name="details_wishlist">WISH LIST</string>
    <string name="details_standart_delivery">Standart delivery</string>
    <string name="details_cash_on_delivery">Cash on delivery</string>
    <string name="details_description">Description</string>
    <string name="details_features">Features</string>
    <string name="details_code">SKU</string>
    <string name="details_size">Size</string>
    <string name="details_type">Type</string>
    <string name="details_origins">Origins</string>
    <string name="details_fragrance">Fragrance</string>
    <string name="cart_grand_total">Grand total</string>
    <string name="cart_checkout">CHECKOUT</string>
    <string name="login_signin">Sign in</string>
    <string name="login_username">Email</string>
    <string name="login_password">password</string>
    <string name="login_login">LOG IN</string>
    <string name="login_create_account">Create new account</string>
    <string name="login_not_memeber">Not a member</string>
    <string name="login_forget_password">Forget password ?</string>
    <string name="login_have_account">Have an account</string>
    <string name="login_invalid_email">Invalid Email or Password</string>
    <string name="signup_firstname">Fist name</string>
    <string name="signup_secondname">Second name</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_password">password</string>
    <string name="signup_register">REGISTER</string>
    <string name="stored_addresses_add_address"> ADD ADDRESS </string>
    <string name="add_address_personal_info">Personal info</string>
    <string name="add_address_firstname">First name</string>
    <string name="add_address_second_name">Second name</string>
    <string name="add_address_company">Company</string>
    <string name="add_address_telephone">Telephone</string>
    <string name="add_address_fax">Fax</string>
    <string name="add_address_address_info">Address info</string>
    <string name="add_address_street_name">Street name</string>
    <string name="add_address_street_number">Street number</string>
    <string name="add_address_address_extras">Address extras</string>
    <string name="add_address_country">Country</string>
    <string name="add_address_city">City</string>
    <string name="add_address_zip">ZIP</string>
    <string name="add_address_add_address">ADD ADDRESS</string>
    <string name="checkout_item_details">ITEM DETAILS</string>
    <string name="checkout_shipment">Shipment</string>
    <string name="checkout_standard_delivery">Standard delivery</string>
    <string name="checkout_shipment_details">SHIPMENT DETAILS</string>
    <string name="checkout_sub_total">Sub total</string>
    <string name="checkout_shipping">Shipping</string>
    <string name="checkout_grand_total">Grand total</string>
    <string name="checkout_make_payment">MAKE PAYMENT</string>
    <string name="taxes">Free Shipping</string>
    <string name="paymentMethod">PAYMENT METHOD</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="shippingMethod">Shipping Method</string>
    <string name="choosePaymentMethod">Choose Payment Method</string>
    <string name="emptyCart_title3">Continue shopping</string>
    <string name="emptyWishlist_title1">Wishlist is empty</string>
    <string name="emptyWishlist_title2">Thank you for visiting Arabian Oud.</string>
    <string name="emptyWishlist_title3">Continue shopping</string>
    <string name="payment_title1">Thank you for your order</string>
    <string name="payment_title2">Order number</string>
    <string name="payment_title3">view order details</string>
    <string name="shippingAndReturn_Delivery_title">Delivery</string>
    <string name="shippingAndReturn_Delivery_details">
•	Shipping and taxes will be calculated based on the country and method of delivery and indicated at the time of checkout.</string>
    <string name="shippingAndReturn_Delivery_details1">•	Pay Cash on Delivery service is only available inside Saudi Arabia.</string>
    <string name="shippingAndReturn_Delivery_details2">•All purchases will be shipped and delivered through the known shipping companies within 2 to 8 business days for Saudi Arabia, and may take longer to shipping outside Saudi Arabia which varies from country to another. You can track your shipment through the shipping company’s website.</string>
    <string name="shippingAndReturn_ReturnandExchange_title">Return &amp; Exchange</string>
    <string name="shippingAndReturn_ReturnandExchange_details">Our customer friendly return policy allows for a privilege of returning eligible items within 3 days from delivery date so long as the item(s), along with the Original Packaging is in the original state and condition when purchased and received. Please inform us through one of our contact channels first, in order to allow for a smooth return process. Refunds will be made as per the mode of payment you selected during your purchase.

Returns are hassle-free, with no extra charge at Arabian Oud. If you are unsatisfied for any reason with your purchase, please contact Arabian Oud customer service at info@arabianoud.com.sa or call us at +966 8001242030 from Saudi Arabia, or at +966 114742222 from anywhere else within 3 days of receiving your order to initiate the return or exchange process.

Conveniently, we will arrange the return for you. You could contact our Customer Services Team to arrange a courier pick-up for your item and a quick Return. To ensure you are within the Policy time frame for returning your purchase, please make sure that you contact us as soon as you have decided on returning an item.</string>
    <string name="bankTransfer_intro">You can make a bank transfer to our own accounts data :</string>
    <string name="bankTransfer_SABB_Title">SABB Bank</string>
    <string name="bankTransfer_SABB_client">If you a current SABB Client : 001292721001</string>
    <string name="bankTransfer_SABB_not_client">If you are a Client for any other Bank, Kindly use this IBAN : SA3245000000001292721001</string>
    <string name="bankTransfer_Rajhi_title">Al-Rajhi Bank</string>
    <string name="bankTransfer_Rajhi_client">If you a current Al-Rajhi Client : 126608010073020</string>
    <string name="bankTransfer_Rajhi_not_client">If you are a Client for any other Bank, Kindly use this IBAN : SA2680000126608010073020</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="gateError">Choose Payment Method</string>
    <string name="gate2play_name">Name</string>
    <string name="gate2play_ccn">Credit Card Number</string>
    <string name="gate2play_expirydate">Expires MM/YYYY</string>
    <string name="gate2play_cvv">CVV</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
</resources>