<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ecommerce.dell.mcommerce.activity.payment.CheckoutBankTransferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_intro"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_SABB_Title"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_SABB_client"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_SABB_not_client"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/bankTransfer_Rajhi_title"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_Rajhi_client"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankTransfer_Rajhi_not_client"
            />

        <Button
            android:id="@+id/buy"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/checkout_make_payment"
            android:textColor="#fff"
            android:background="@drawable/btneffect"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout_alert"
        android:background="@color/black_overlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_alert"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">


            <TextView
                android:id="@+id/textView_alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/alert"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_alert_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_alert_title"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/login_invalid_email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView_alert_content"
                android:layout_marginTop="15dp"
                android:background="@color/gray"></RelativeLayout>

            <Button
                android:id="@+id/button_alert_ok"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeLayout_line"
                android:background="@color/transparent"
                android:text="@string/ok"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
