<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyWishlist_title1"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyWishlist_title2"
        android:textSize="11dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyWishlist_title3"
        android:textSize="12dp"
        android:padding="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btneffect"
        android:textColor="@android:color/white"
        android:id="@+id/explore"

        />
        </LinearLayout>

</LinearLayout>