<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ProcessTransactionActivity"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/gateError"
                android:layout_gravity="start"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:padding="5dp"

                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/gate2play_name" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText1"
                android:layout_below="@+id/editText1"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/gate2play_ccn"
                android:inputType="phone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiry_month"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold" />
                    <Spinner
                        android:id="@+id/month_spinner"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiry_year"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/year_spinner"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>
            </LinearLayout>




            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText2"
                android:layout_below="@+id/editText2"
                android:ems="10"
                android:hint="@string/gate2play_expirydate"
                android:layout_marginTop="15dp"
                android:inputType="date"
                />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText3"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/gate2play_cvv"
                android:inputType="date" />



            <Button
                android:id="@+id/button_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editText4"
                android:layout_alignRight="@+id/editText4"
                android:layout_below="@+id/editText4"
                android:layout_marginTop="20dp"
                android:background="#733115"
                android:text="@string/paypal_buy"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout_alert"
        android:background="@color/black_overlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_alert"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">


            <TextView
                android:id="@+id/textView_alert_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/alert"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView_alert_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_alert_title"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/login_invalid_email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/textView_alert_content"
                android:layout_marginTop="15dp"
                android:background="@color/gray"></RelativeLayout>

            <Button
                android:id="@+id/button_alert_ok"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeLayout_line"
                android:background="@color/transparent"
                android:text="@string/ok"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>